# expense-tracker-mcp-server

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18448493153c_create_users_expenses_categories_tables.py
app/: __init__.py  config.py  database.py  main.py
app/models/: category.py  expense.py  user.py
app/routers/: __init__.py  auth.py  expenses.py  test.py
app/routers/categories/: categories.json
app/schemas/: __init__.py  category.py  expense.py  user.py
app/utils/: auth.py  dependencies.py
