[project]
name = "expense-tracker-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "argon2-cffi",
    "fastapi",
    "fastmcp",
    "passlib[bcrypt]",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "python-jose[cryptography]",
    "sqlalchemy",
    "uvicorn",
]
